// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <strong class="kol-heading--strong kol-heading__headline">
            Überschrift
          </strong>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <strong class="kol-heading--strong kol-heading__headline">
            Überschrift
          </strong>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=0 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <strong class="kol-heading--strong kol-heading__headline">
            Überschrift
          </strong>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h1 class="kol-heading--h1 kol-heading__headline">
            Überschrift
          </h1>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h1 class="kol-heading--h1 kol-heading__headline">
            Überschrift
          </h1>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=1 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h1 class="kol-heading--h1 kol-heading__headline">
            Überschrift
          </h1>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h2 class="kol-heading--h2 kol-heading__headline">
            Überschrift
          </h2>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h2 class="kol-heading--h2 kol-heading__headline">
            Überschrift
          </h2>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=2 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h2 class="kol-heading--h2 kol-heading__headline">
            Überschrift
          </h2>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h3 class="kol-heading--h3 kol-heading__headline">
            Überschrift
          </h3>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h3 class="kol-heading--h3 kol-heading__headline">
            Überschrift
          </h3>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=3 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h3 class="kol-heading--h3 kol-heading__headline">
            Überschrift
          </h3>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h4 class="kol-heading--h4 kol-heading__headline">
            Überschrift
          </h4>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h4 class="kol-heading--h4 kol-heading__headline">
            Überschrift
          </h4>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=4 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h4 class="kol-heading--h4 kol-heading__headline">
            Überschrift
          </h4>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h5 class="kol-heading--h5 kol-heading__headline">
            Überschrift
          </h5>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h5 class="kol-heading--h5 kol-heading__headline">
            Überschrift
          </h5>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=5 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h5 class="kol-heading--h5 kol-heading__headline">
            Überschrift
          </h5>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=false 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h6 class="kol-heading--h6 kol-heading__headline">
            Überschrift
          </h6>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 _hasCloser=true 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h6 class="kol-heading--h6 kol-heading__headline">
            Überschrift
          </h6>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
      <kol-button-wc _hidelabel="" _label="kol-close" _tooltipalign="left" class="close"></kol-button-wc>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" _level=6 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h6 class="kol-heading--h6 kol-heading__headline">
            Überschrift
          </h6>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;

exports[`kol-card should render with _label="Überschrift" 1`] = `
<kol-card class="kol-card">
  <template shadowrootmode="open">
    <div class="card">
      <div class="header">
        <div class="kol-heading">
          <h1 class="kol-heading--h1 kol-heading__headline">
            Überschrift
          </h1>
        </div>
      </div>
      <div class="content">
        <slot></slot>
      </div>
    </div>
  </template>
</kol-card>
`;
